--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,11 @@
 doctype html
 html
   head
-    title App Name
+   title
+    = yield(:title) 
+    | Ruby on Rails Tutorial Sample App
+    meta name="viewport" content="width=device-width,initial-scale=1"
+    meta charset="utf-8"
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_pack_tag 'stylesheets', 'data-turbolinks-track': 'reload'
