--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -1,9 +1,9 @@
 - provide(:title, "About")
-h1 About
+h1.btn-primary About
 p
   | The 
   a href="https://www.railstutorial.org/"
-  <em>Ruby on Rails
+  em Ruby on Rails
   | Tutorial
   |, part of the
   a href="https://www.learnenough.com/"
