--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,10 +1,10 @@
-.card
-  h1 Sample App
-  h2
-    | This is the home page for the
-    a href="https://www.railstutorial.org/" Ruby on Rails Tutorial
-    | sample application.
-  = link_to 'Sign up now!', '#', class: "btn-primary"
+.container.text-center
+  .card
+    h1.logo Sample App
+    h2
+      | This is the home page for the
+      a href="https://www.railstutorial.org/" Ruby on Rails Tutorial
+      | sample application.
+    = link_to 'Sign up now!', '#', class: "btn-primary"
   = link_to "https://rubyonrails.org/"
     - image_tag("rails.svg", alt: "Rails logo", width: "200") 
-= image_tag("kitten.jpg", alt: "kitten pic", width: "600") 
