Finish layout and routes

--- a/app/javascript/stylesheets/my_theme.scss
+++ b/app/javascript/stylesheets/my_theme.scss
@@ -51,11 +51,10 @@
 .nav-link {
     display: block;
     padding: .5rem;
-    a{ 
+    a { 
     color: var(--rm-color-on-background);
     }
 }
-
 /* footer */
 
 footer {
@@ -63,27 +62,40 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
+
+  a {
+    color: #555;
+  }
+
+  a:hover {
+    color: #222;
+  }
+
+  small {
+    float: left;
+  }
+
+  ul {
+    float: right;
+    list-style: none;
+
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
+
+ 
+
 }
 
-footer a {
-  color: #555;
-}
 
-footer a:hover {
-  color: #222;
-}
 
-footer small {
-  float: left;
-}
 
-footer ul {
-  float: right;
-  list-style: none;
-}
 
-footer ul li {
-  float: left;
-  margin-left: 15px;
-}
+
+
+
+
+
 
