--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -2,6 +2,6 @@
     = link_to root_path, id: "logo" 
       | sample app
     ul.nav.navbar-nav.navbar-right
-      li.nav-link = link_to "Home",   '#'
-      li.nav-link = link_to "Help",   '#'
+      li.nav-link = link_to "Home",   root_path
+      li.nav-link = link_to "Help",   help_path
       li.nav-link = link_to "Log in", '#'
