--- a/app/views/static_pages/help.html.slim
+++ b/app/views/static_pages/help.html.slim
@@ -5,6 +5,6 @@ p
   a href="https://www.railstutorial.org/help" Rails Tutorial Help page.
   | To get help on this sample app, see the
   a href="https://www.railstutorial.org/book"
-  <em>Ruby on Rails Tutorial</em>
+    em Ruby on Rails Tutorial
   | book
 
