--- a/app/javascript/stylesheets/my_theme.scss
+++ b/app/javascript/stylesheets/my_theme.scss
@@ -24,15 +24,7 @@
   justify-content: flex-end;
 }
 
-.navbar {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap; 
-  align-items: center;
-  justify-content: space-between;
-}
-
-#logo {
+.logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
@@ -43,7 +35,7 @@
   font-weight: bold;
 }
 
-#logo:hover {
+.logo:hover {
   color: #fff;
   text-decoration: none;
 }
