--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -4,4 +4,18 @@ header.nav-bar
   .flex
     = link_to "Home", root_path, class: 'nav-bar__link'
     = link_to "Help", help_path, class: 'nav-bar__link'
-    = link_to "Log in", '#', class: 'nav-bar__link'
+    - if logged_in? 
+      = link_to "Users", '#', class: 'nav-bar__link'
+      = link_to "Log out", root_path, class: 'nav-bar__link'
+
+      .form-group 
+        label.form-label Account
+        select.form-dropdown
+          option 
+          option 
+            = link_to "Profile", current_user 
+          option
+            = link_to "Settings", '#' 
+           
+    - else
+      = link_to "Log in", '#', class: 'nav-bar__link'
