--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ html
     meta name="viewport" content="width=device-width,initial-scale=1"
     meta charset="utf-8"
     = render 'layouts/rails_default'
+    = javascript_importmap_tags
   body.wrapper--main
     = render 'layouts/header'
     = render 'shared/flash'
